fixed UI issues & added scrollbar styles

--- a/src/components/github-markdown.css
+++ b/src/components/github-markdown.css
@@ -990,5 +990,7 @@
 
 .markdown-body {
   background: white;
+  /* background: rgb(37, 35, 35);
+  color: white; */
   padding: 30px;
 }
