--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; */
-  background: rgb(34, 34, 39);
+  background: blue;
 }
 
 .app-container {
@@ -32,18 +32,16 @@ html {
   min-height: 0;
   width: 90vw;
   height: 90vh;
-  background-color: black;
+  background-color: rgb(255, 255, 255);
   border-radius: 12px;
 }
 
 .titlebar-container {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 25px;
-  /* min-height: 25px; */
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
-  /* background-color: white; */
+  background-color: rgb(22, 21, 21);
 }
 
 .window-controls {
@@ -53,14 +51,19 @@ html {
 .panes-container {
   display: flex;
   height: 100%;
+  width: 100%;
   min-height: 0;
-
-  /* min-height: 0; */
+  /* border-bottom-left-radius: 12px; */
   /* flex-direction: column; */
 }
 
 .markdown-pane {
-  width: 50%;
+  padding-top: 25px;
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  scrollbar-color: rgb(31, 30, 30) black;
+  border-bottom-left-radius: 12px;
 }
 
 .pane-title {
@@ -71,10 +74,14 @@ html {
 }
 
 .preview-pane {
-  width: 50%;
+  width: 100%;
+  height: 100%;
   overflow-y: scroll;
+  scrollbar-color: rgb(235, 233, 233) white;
+  border-bottom-right-radius: 12px;
 }
 
+/* Ace Editor */
 #markdown-editor {
   background: black;
   width: 100% !important;
@@ -86,3 +93,23 @@ html {
 .ace_gutter {
   background: black !important;
 }
+
+/* Ace Editor */
+
+/* Scrollbar */
+::-webkit-scrollbar {
+  height: 12px;
+  width: 12px;
+  background: #000;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #222221;
+  -webkit-border-radius: 1ex;
+  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+::-webkit-scrollbar-corner {
+  background: #000;
+}
+/* Scrollbar */
